--- a/src/app/components/book-list/book-list.component.html
+++ b/src/app/components/book-list/book-list.component.html
@@ -1,9 +1,22 @@
-<a routerLink="/">Về trang chủ</a>
 <table>
-  <caption><h3>Danh sách đọc</h3></caption>
+  <caption>
+    <a routerLink="/">Về trang chủ</a>
+    <h3>Danh sách đọc</h3>
+  </caption>
+  <tr *ngFor="let book of books; let i = index">
+    <td *ngIf="book.read == false">{{ book.name }}</td>
+    <td *ngIf="book.read == false">
+      <button (click)="makeRead(i)">Đã đọc</button>
+    </td>
+  </tr>
   <tr>
     <th colspan="2">
-      <button>Thêm</button>
+      <form [formGroup]="bookForm" (ngSubmit)="addBook()">
+        <input type="text" formControlName="name" id="name">
+        <input type="text" formControlName="read" value="false" hidden>
+        <button type="submit">Thêm</button>
+      </form>
     </th>
   </tr>
 </table>
+<h5><a routerLink="/book-read">Danh sách đã đọc</a></h5>
